--- a/templates/result.html
+++ b/templates/result.html
@@ -18,5 +18,8 @@
       <p>Pressure: {{ result.main.pressure }} mBar</p>
   </div>
 </div>
-
+<!-- Back button -->
+        <div class="col-md-8 col-md-offset-2 text-center">
+            <a href="/" class="btn btn-primary" role="button">Back to Main page</a>
+        </div>
 {% endblock content %}
