added subscription/cron jobs/some html changes

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,9 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Welcome to your Weather App</h1>
-    <h3>Here you can choose your city and get instant weather info...</h3>
+    <h1>Welcome to Weather App</h1>
+    <h3>Fill in the search form and get instant weather info...or,</h3>
+    <h3><a href="/subscribe">Subscribe</a> to receive an everyday email for weather info in your city.</h3>
 </div>
 
 <div class="row">
