--- a/assets/custom/css/style.css
+++ b/assets/custom/css/style.css
@@ -1,3 +1,7 @@
 body {
 background-image: url("https://report.az/storage/news/2d24481fa1ef4a20e1a703f88f8400c4/aee96c6d-d63a-4f9a-897e-3213b477b5fe.jpg");
 }
+
+.container {
+    padding-right: 0px;
+    padding-left: 0px;
