--- a/templates/subscribe.html
+++ b/templates/subscribe.html
@@ -9,7 +9,7 @@
     <div class="col-md-8 col-md-offset-2">
     <div class="panel panel-primary">
         <div class="panel-heading panel-heading-comments-custom">
-            <h3 class="panel-title">Subscribe and receive everyday email about weather in your town.</h3>
+            <h3 class="panel-title">Subscribe and receive everyday email at 8am about weather info in your town.</h3>
         </div>
         <div class="panel-body">
         <form method="post" action="/subscribe">
