--- a/assets/custom/css/style.css
+++ b/assets/custom/css/style.css
@@ -5,3 +5,10 @@ background-image: url("https://report.az/storage/news/2d24481fa1ef4a20e1a703f88f
 .container {
     padding-right: 0px;
     padding-left: 0px;
+}
+
+.mars {
+    background-image: url("https://s-media-cache-ak0.pinimg.com/originals/68/21/83/682183f09bdf44e041f166718f2b9fc0.jpg");
+    font-family: Monospace, Times, serif;
+    color: white;
+}
