--- a/templates/mars.html
+++ b/templates/mars.html
@@ -4,20 +4,20 @@
 
 {% block content %}
 
-<div class="panel panel-info">
+<div class="panel panel-info mars">
   <div class="panel-heading">
       <h3 class="panel-title">Current weather on <strong>planet Mars:</strong></h3>
   </div>
   <div class="panel-body">
-    <p>Terrestrial date: {{ podatki.report.terrestrial_date }}</p>
-        <p>Sol date: {{ podatki.report.sol }}</p>
-        <p>Minimum temperature: {{ podatki.report.min_temp }} &#x2103;</p>
-        <p>Maximum temperature: {{ podatki.report.max_temp }} &#x2103;</p>
-        <p>Pressure: {{ podatki.report.pressure }}</p>
-        <p>Atmo-opacity: {{ podatki.report.atmo_opacity }}</p>
-        <p>Season: {{ podatki.report.season }}</p>
-        <p>Sunrise: {{ podatki.report.sunrise }}</p>
-        <p>Sunset: {{ podatki.report.sunset }}</p>
+        <p>Terrestrial date: <strong>{{ podatki.report.terrestrial_date }}</strong></p>
+        <p>Sol date: <strong>{{ podatki.report.sol }}</strong></p>
+        <p>Minimum temperature: <strong>{{ podatki.report.min_temp }} &#x2103;</strong></p>
+        <p>Maximum temperature: <strong>{{ podatki.report.max_temp }} &#x2103;</strong></p>
+        <p>Pressure: <strong>{{ podatki.report.pressure }}</strong></p>
+        <p>Atmo-opacity: <strong>{{ podatki.report.atmo_opacity }}</strong></p>
+        <p>Season: <strong>{{ podatki.report.season }}</strong></p>
+        <p>Sunrise: <strong>{{ podatki.report.sunrise }}</strong></p>
+        <p>Sunset: <strong>{{ podatki.report.sunset }}</strong></p>
   </div>
 </div>
 
